adicionando paragrafo em teste

--- a/teste.html
+++ b/teste.html
@@ -7,5 +7,6 @@
 <body>
 	<h1>Primeiro Codigo</h1>
 	<p>Construindo primeiro codigo para postar no git</p>
+	<p>Aprendendo novos comandos para manipular o git</p>
 </body>
 </html>
