adicionando formatações de texto

--- a/teste.html
+++ b/teste.html
@@ -3,6 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>ola mundo</title>
+	<style type="text/css">
+		h1{
+			color: red;
+		}
+		p{
+			color: blue;
+		}
+	</style>
 </head>
 <body>
 	<h1>Primeiro Codigo</h1>
