adicionando cabeçalho e estilizando o mesmo

--- a/teste.html
+++ b/teste.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 	<h1>Primeiro Codigo</h1>
+	<h2>meu primeiro codigo no github</h2>
 	<p>Construindo primeiro codigo para postar no git</p>
 	<p>Aprendendo novos comandos para manipular o git</p>
 </body>
