adicionando mais paragrafo e estilizando texto

--- a/teste.html
+++ b/teste.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>ola mundo</title>
-	<style type="text/css">
-		h1{
-			color: red;
-		}
-		p{
-			color: blue;
-		}
-	</style>
-</head>
-<body>
-	<h1>Primeiro Codigo</h1>
-	<h2>meu primeiro codigo no github</h2>
-	<p>Construindo primeiro codigo para postar no git</p>
-	<p>Aprendendo novos comandos para manipular o git</p>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>ola mundo</title>
+		<style type="text/css">
+			h1{
+				background-color: red;
+				color: white;
+
+			}
+			p{
+				background-color: blue;
+				color: white;
+			}
+		</style>
+	</head>
+	<body>
+		<h1>Primeiro Codigo</h1>
+		<h2>meu primeiro codigo no github</h2>
+		<p>Construindo primeiro codigo para postar no git</p>
+		<p>Aprendendo novos comandos para manipular o git</p>
+		<p>
+			 Nobis ullam quia deleniti sint. Est vitae fugiat nemo odio exercitationem. Necessitatibus expedita aspernatur quod eum expedita. 
+			 Unde consequatur ex rerum excepturi. Dignissimos laborum et dolor. Aut sit culpa aperiam molestiae tenetur 
+			 aut aliquam aut.
+		</p>
+	</body>
 </html>
